--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,7 @@ state={
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,10 +73,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 34,
 "folded_lines": [],
 "h_scroll_position": 0,
-"row": 65,
+"row": 49,
+"scroll_position": 33.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/arc_loader/load_checker.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": [],
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
