--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=["res://testgame/test_scene_1.tscn", "res://testgame/test_scene_2.tscn", "res://addons/arc_loader/loading_screen.tscn"]
+open_scenes=["res://testgame/test_scene_1.tscn", "res://testgame/test_scene_2.tscn", "res://addons/arc_loader/loading_screen.tscn", "res://addons/arc_loader/loading_icon.tscn"]
 
 [ScriptEditor]
 
 open_scripts=["res://addons/arc_loader/arc_loader.gd", "res://addons/arc_loader/loading_screen.gd", "res://addons/arc_loader/load_checker.gd", "res://addons/arc_loader/plugin.cfg", "res://addons/arc_loader/plugin.gd", "res://testgame/test_scene_1.gd", "res://testgame/test_scene_2.gd"]
-open_help=["Thread"]
+open_help=["SceneTree"]
 script_split_offset=52
 list_split_offset=128
