--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/hclark7/AppData/Roaming/Godot/app_userdata/Godot Version Manager/versions/Godot_v4.0-rc6_win64.exe"
+executable_path="C:/Users/hclark7/AppData/Roaming/Godot/app_userdata/Godot Version Manager/versions/Godot_v4.0-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
