Added start_loading signal

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,6 +21,6 @@ open_scenes=["res://testgame/test_scene_1.tscn", "res://testgame/test_scene_2.ts
 [ScriptEditor]
 
 open_scripts=["res://addons/arc_loader/arc_loader.gd", "res://addons/arc_loader/loading_screen.gd", "res://addons/arc_loader/load_checker.gd", "res://addons/arc_loader/plugin.cfg", "res://addons/arc_loader/plugin.gd", "res://testgame/test_scene_1.gd", "res://testgame/test_scene_2.gd"]
-open_help=["SceneTree"]
+open_help=[]
 script_split_offset=52
 list_split_offset=128
